--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
     <footer class="footer">
       <div class="container flexbox content">
         <div class="footer-contacts">
-          <a href="/" class="logo">
+          <a href="" class="logo">
             <span class="logo-blue">Web</span> Studio
           </a>
           <div class="contacts-margin">
